--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
   "description": "Wasserstoff Task full stack",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yashaswi Anand",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
   }
 }
